@@ -1,3 +1,5 @@
+- get_target renamed to correct "has_target"
+
 2.001 2020-08-16
 - fix Changes formatting
 - also FSFunctionMap implements virtual filesystem
